--- a/contactus.html
+++ b/contactus.html
@@ -5,6 +5,7 @@
         </title>
         <body>
             <h1>this is git example</h1>
+            <h2>this is biruka website </h2>
         </body>
     </head>
 </html>
