--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,7 @@
         </title>
         <body>
             <h1>this is git example</h1>
-            <h2>this is biruka website biruk@gmail.com </h2>
+            <h2>this is biruka website b </h2>
         </body>
     </head>
 </html>
